[project]
name = "mygocli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "MIT"
requires-python = "==3.11.*"
dependencies = [
    "sentence-transformers[onnx]>=5.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
mygo = "mygo_search:main"
